[tool.poetry]
name = "sutton-barto-programming"
version = "0.1.0"
description = ""
authors = ["Javier <javier.smith.dlc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
